test/expected/explain_fel_v-c17.out
explain void f( ... )
                ^
17: error: variadic specifier can not be only parameter until C23
